--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14863,6 +14863,19 @@
 "~^/[Mm]usk-.*$" "/note/musk";
 "~^/note/[Ee]lon.*$" "/note/musk";
 "~^/note/Musk.*$" "/note/musk";
+"~^/doc/technology/2008-horizons\.pdf.*$" "/static/404";
+"~^/goopromarketin.*$" "/static/404";
+"~^/doc/anie/1978-hosaka\.pdf.*$" "/doc/anime/1978-nosaka.pdf";
+"~^/fiction/clippy/doc/cs/hardware/2020-leiserson\.pdf.*$" "/doc/cs/hardware/2020-leiserson.pdf";
+"~^/doc/dnb/2010-alloway.pd%5Cf$" "/doc/dual-n-back/2010-alloway.pdf";
+"~^/newsletter/2018/13/doc/fiction/criticism/2009-fortugno\.pdf.*$" "/doc/fiction/criticism/2009-fortugno.pdf";
+"~^/doc/2004-hughes\.pdf.*$" "/doc/nicotine/2004-hughes.pdf";
+"~^/face/doc/www/arxiv.org/1320731e0aa5fc8b45eb06bb32d168ae1e7ae9a5\.pdf.*$" "/doc/www/arxiv.org/1320731e0aa5fc8b45eb06bb32d168ae1e7ae9a5.pdf";
+"~^/fiction/clippy/doc/www/arxiv.org/658b4a13863e88e856c6cfcf686a5e9eb01776b3\.pdf.*$" "/doc/www/arxiv.org/658b4a13863e88e856c6cfcf686a5e9eb01776b3.pdf";
+"~^/newsletter/2021/04/doc/www/arxiv.org/7b91a205030adef3c95c92d945826316d38dc689\.pdf.*$" "/doc/www/arxiv.org/7b91a205030adef3c95c92d945826316d38dc689.pdf";
+"~^/face/doc/www/arxiv.org/ef876839ce93f531a5873c050ba998ae0cdcf892\.pdf.*$" "/doc/www/arxiv.org/ef876839ce93f531a5873c050ba998ae0cdcf892.pdf";
+"~^/face/doc/www/cdn.openai.com/cd988b9e4e4a3752b48cc6576a19479eb066e27d\.pdf.*$" "/doc/www/cdn.openai.com/cd988b9e4e4a3752b48cc6576a19479eb066e27d.pdf";
+"~^/danbooru2021/doc/www/citeseerx.ist.psu.edu/f85d70bcb700287ac726efbb339c62fae222ae91\.pdf.*$" "/doc/www/citeseerx.ist.psu.edu/f85d70bcb700287ac726efbb339c62fae222ae91.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -20508,6 +20521,12 @@
 "~^//cgi-bin/.*$" "/static/404";
 "~^//.*/install.php.*$" "/static/404";
 "~^//.well-known/acme-challenge/install.php.*$" "/static/404";
+"~^///yanz.*$" "/static/404";
+"~^///xmrlpc.php.*$" "/static/404";
+"~^///wp-p.*$" "/static/404";
+"~^///wp-includes/.*$" "/static/404";
+"~^///.well-known/.*$" "/static/404";
+"~^/static/img/xmrlpc.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
