+; forgot to commit Maggie Appleton SVG

--- a/.gitignore
+++ b/.gitignore
@@ -8,16 +8,17 @@ metadata/archive.hs
 **.o
 **.hi
 **.elc
-build/hakyll
-build/generateDirectory
+build/changeTag
 build/generateBacklinks
+build/generateDirectory
 build/generateLinkBibliography
-build/link-extractor
-build/link-suggester
 build/generateSimilar
-build/preprocess-markdown
 build/generateSimilarLinks
 build/guessTag
+build/hakyll
+build/link-extractor
+build/link-suggester
+build/preprocess-markdown
 build/**/*.html
 css/**/*.html
 js/**/*.html
