--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14880,6 +14880,9 @@
 "~^/knock.*$" "/cat-knocking";
 "~^/cat-knock$" "/cat-knocking";
 "~^/cat-push.*$" "/cat-knocking";
+"~^/cat$" "/index#domestic-cats";
+"~^/[Rr]andom$" "/index#x-of-the-day";
+"~^/[Ss]pecial:[Rr]andom$" "/index#x-of-the-day";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
