--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14883,6 +14883,11 @@
 "~^/cat$" "/index#domestic-cats";
 "~^/[Rr]andom$" "/index#x-of-the-day";
 "~^/[Ss]pecial:[Rr]andom$" "/index#x-of-the-day";
+"~^/.*/Simulation-inferences.*$" "/simulation-inference";
+"~^/.*/doc/technology/2000-cook.pdf.*$" "/doc/technology/2000-cook.pdf";
+"~^/Improvem$" "/improvement";
+"~^/haskell/Wikipedia-RSS-Archive-Bot.*$" "/haskell/wikipedia-rss-archive-bot";
+"~^/doc/darknet-market/2011-08-25$" "/doc/darknet-market/2011-08-25-baal-operationachilles.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -20534,6 +20539,11 @@
 "~^///wp-includes/.*$" "/static/404";
 "~^///.well-known/.*$" "/static/404";
 "~^/static/img/xmrlpc.*$" "/static/404";
+"~^/wsdl.*$" "/static/404";
+"~^/publish/pages/19/logo-website-zonderstreep.png.*$" "/static/404";
+"~^/private_html.*$" "/static/404";
+"~^/doc/icons/ip.png.*$" "/static/404";
+"~^/canonteknikser.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
