--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14888,6 +14888,13 @@
 "~^/Improvem$" "/improvement";
 "~^/haskell/Wikipedia-RSS-Archive-Bot.*$" "/haskell/wikipedia-rss-archive-bot";
 "~^/doc/darknet-market/2011-08-25$" "/doc/darknet-market/2011-08-25-baal-operationachilles.html";
+"~^/fiction/clippy/doc/existential-risk/1998-hamming\.pdf.*$" "/doc/existential-risk/1998-hamming.pdf";
+"~^/doc/technology/2018-07-25-45$" "/doc/technology/2018-07-25-johnbackus-howdecentralizationevolves.html";
+"~^/turing-complete/doc/www/0b4af6cdc2f0c5998459-c0245c5c937c5dedcca3f1764ecc9b2f.r43.cf2.rackcdn.com/4ca32444a76c176f81cc2e9ad978b540691d9ced\.pdf.*$" "/doc/www/0b4af6cdc2f0c5998459-c0245c5c937c5dedcca3f1764ecc9b2f.r43.cf2.rackcdn.com/4ca32444a76c176f81cc2e9ad978b540691d9ced.pdf";
+"~^/backstop/doc/www/arxiv.org/3d236c983049fc7785b55fb61c3e42aee5103c15\.pdf.*$" "/doc/www/arxiv.org/3d236c983049fc7785b55fb61c3e42aee5103c15.pdf";
+"~^/newsletter/2020/12/doc/www/arxiv.org/48f40ea07372ac99db64d422a882cb7650b5971b\.pdf.*$" "/doc/www/arxiv.org/48f40ea07372ac99db64d422a882cb7650b5971b.pdf";
+"~^/face/doc/www/arxiv.org/a6cd01c90d6932f8875a489af6985fdfa8e2284b\.pdf.*$" "/doc/www/arxiv.org/a6cd01c90d6932f8875a489af6985fdfa8e2284b.pdf";
+"~^/.*/Bakewell$" "/review/bakewell";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -20544,6 +20551,31 @@
 "~^/private_html.*$" "/static/404";
 "~^/doc/icons/ip.png.*$" "/static/404";
 "~^/canonteknikser.*$" "/static/404";
+"~^///wp-admin.*$" "/static/404";
+"~^///dropdown.*$" "/static/404";
+"~^///ws\.php.*$" "/static/404";
+"~^///wp-head.*$" "/static/404";
+"~^///wp-consar.*$" "/static/404";
+"~^///repeater.php.*$" "/static/404";
+"~^///radio.php.*$" "/static/404";
+"~^///marijuana.php.*$" "/static/404";
+"~^/kode77.*$" "/static/404";
+"~^/ipeservices.*$" "/static/404";
+"~^//ioxi-rex4.*$" "/static/404";
+"~^///ebs\.php.*$" "/static/404";
+"~^/doc/mar.php.*$" "/static/404";
+"~^///css/index.php.*$" "/static/404";
+"~^///ccx/index.php.*$" "/static/404";
+"~^///cache-compat.*$" "/static/404";
+"~^/betpggame.*$" "/static/404";
+"~^///alfa-rex.*$" "/static/404";
+"~^//alfa-rex.*$" "/static/404";
+"~^///alfanew.*$" "/static/404";
+"~^//alfanew.*$" "/static/404";
+"~^///ajax-actions.*$" "/static/404";
+"~^///admin-post.*$" "/static/404";
+"~^///adminfuns.*$" "/static/404";
+"~^///about.php.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
