--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9763,3 +9763,4 @@ default "";
 "~^/doc/cat/psychology/drug/catnip/1976-verberne.pdf.*$" "/doc/cat/psychology/1976-verberne.pdf";
 "~^/doc/cat/psychology/drug/catnip/1976-preti.pdf.*$" "/doc/dog/1976-preti.pdf";
 "~^/doc/longevity/semaglutide/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agaonist.jpg.*$" "/doc/longevity/semaglutide/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agonist.jpg";
+"~^/doc/genetics/heritable/2014-pellegrino.pdf.*$" "/doc/genetics/heritable/rare/2014-pellegrino.pdf";
