--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14895,6 +14895,9 @@
 "~^/newsletter/2020/12/doc/www/arxiv.org/48f40ea07372ac99db64d422a882cb7650b5971b\.pdf.*$" "/doc/www/arxiv.org/48f40ea07372ac99db64d422a882cb7650b5971b.pdf";
 "~^/face/doc/www/arxiv.org/a6cd01c90d6932f8875a489af6985fdfa8e2284b\.pdf.*$" "/doc/www/arxiv.org/a6cd01c90d6932f8875a489af6985fdfa8e2284b.pdf";
 "~^/.*/Bakewell$" "/review/bakewell";
+"~^/T[Ll][Aa]$" "/tla";
+"~^/[Ff][Ll][Aa]$" "/tla";
+"~^/[Aa]crony.*$" "/tla";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
