--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9764,3 +9764,7 @@ default "";
 "~^/doc/cat/psychology/drug/catnip/1976-preti.pdf.*$" "/doc/dog/1976-preti.pdf";
 "~^/doc/longevity/semaglutide/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agaonist.jpg.*$" "/doc/longevity/semaglutide/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agonist.jpg";
 "~^/doc/genetics/heritable/2014-pellegrino.pdf.*$" "/doc/genetics/heritable/rare/2014-pellegrino.pdf";
+"~^/doc/cs/cryptography/2000-mao.pdf.*$" "/doc/cs/cryptography/timelock/2000-mao.pdf";
+"~^/doc/cs/cryptography/2002-magkos.pdf.*$" "/doc/cs/cryptography/timelock/2002-magkos.pdf";
+"~^/doc/cs/cryptography/2015-kuppusamy.pdf.*$" "/doc/cs/cryptography/timelock/2015-kuppusamy.pdf";
+"~^/doc/cs/cryptography/2020-thyagarajan.pdf.*$" "/doc/cs/cryptography/timelock/2020-thyagarajan.pdf";
