Twitter: begin experimenting with running a local Nitter mirror just for myself due to Nitter.net et al blocking all my scrapes

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -930,6 +930,7 @@ server {
         rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
         rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
         rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
+        rewrite ^/doc/www/nitter.net/(?<original>.*)$ /doc/www/localhost/$original permanent;
 
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
         rewrite ^/[a-z0-9-]+/[a-z0-9-]+/[a-z0-9-]+/doc/(?<original>.*)$ /doc/$original permanent;
@@ -946,6 +947,8 @@ server {
         rewrite ^/_src(?<original>.*)$ /static/$original permanent;
         rewrite ^/doc/ai/.*/arxiv.org/(?<original>.*)$ /doc/www/arxiv.org/$original permanent;
         rewrite ^/doc/statistics/bias/animal/index/(?<original>.*)$ /doc/$original permanent;
+        rewrite ^/doc/longevity/semaglutide/(?<file>.*)$ /doc/longevity/glp/semaglutide/$file permanent;
+        rewrite ^/doc/longevity/tirzepatide/(?<file>.*)$ /doc/longevity/glp/tirzepatide/$file permanent;
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
