--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14944,6 +14944,7 @@
 "~^/twdne/$" "/twdne";
 "~^/static/transparency.png.*$" "https://hdsr.mitpress.mit.edu/static/transparency.png";
 "~^/doc/2003-page.pdf.*$" "/doc/nootropic/2003-page.pdf";
+"~^/[Cc][Qq][Kk].*$" "/tla";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
