--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9831,3 +9831,10 @@ default "";
 "~^/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agonist.jpg.*$" "/doc/longevity/glp/semaglutide/2023-wharton-figure2-bodyweightlosswithdailyorforglipronglp1agonist.jpg";
 "~^/2023-wharton.pdf.*$" "/doc/longevity/glp/semaglutide/2023-wharton.pdf";
 "~^/2023-yammine.pdf.*$" "/doc/longevity/glp/semaglutide/2023-yammine.pdf";
+"~^/doc/psychiatry/2011-laporte.pdf.*$" "/doc/psychiatry/borderline/2011-laporte.pdf";
+"~^/doc/psychiatry/2022-skaug.pdf.*$" "/doc/psychiatry/borderline/2022-skaug.pdf";
+"~^/doc/psychiatry/borderline/2012-hooley.pdf.*$" "/doc/psychiatry/borderline/transitional-object/2012-hooley.pdf";
+"~^/doc/psychiatry/borderline/1997-cardasis.pdf.*$" "/doc/psychiatry/borderline/transitional-object/1997-cardasis.pdf";
+"~^/doc/psychiatry/borderline/1981-arkema.pdf.*$" "/doc/psychiatry/borderline/transitional-object/1981-arkema.pdf";
+"~^/doc/ai/2022-03-28-shade_9sq-midjourney-nevermoreraven.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2022-03-28-shade_9sq-midjourney-nevermoreraven.jpg";
+"~^/doc/ai/nn/diffusion/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png";
