--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9838,3 +9838,5 @@ default "";
 "~^/doc/psychiatry/borderline/1981-arkema.pdf.*$" "/doc/psychiatry/borderline/transitional-object/1981-arkema.pdf";
 "~^/doc/ai/2022-03-28-shade_9sq-midjourney-nevermoreraven.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2022-03-28-shade_9sq-midjourney-nevermoreraven.jpg";
 "~^/doc/ai/nn/diffusion/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png";
+"~^/static/img/logo/logo-christmas.jpg.*$" "/static/img/logo/christmas/shawnpresser-hangingornaments.jpg";
+"~^/doc/nootropic/2020-haden.pdf.*$" "/doc/psychedelic/2020-haden.pdf";
