--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9840,3 +9840,4 @@ default "";
 "~^/doc/ai/nn/diffusion/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-14-gwern-midjourneyv5-moonlitpaintingofajapanesebeachbytsuchiyakoitsu.png";
 "~^/static/img/logo/logo-christmas.jpg.*$" "/static/img/logo/christmas/shawnpresser-hangingornaments.jpg";
 "~^/doc/nootropic/2020-haden.pdf.*$" "/doc/psychedelic/2020-haden.pdf";
+"~^/static/font/drop-cap/dropcat/light/C-3.png.*$" "/static/font/drop-cap/dropcat/light/G-10.png";
