--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8884,8 +8884,8 @@
 "~^/static/annotations\?.*$" "/static/annotations.js";
 "~^/build$" "/static/build/";
 "~^/anchor-checker.php$" "/static/build/anchor-checker.php";
-"~^/build_css.php$" "/static/build/build_css.php";
-"~^/static/build/build_css.php.html.html$" "/static/build/build_css.php.html";
+"~^/build_css.php$" "/static/build/build_mode_css.php";
+"~^/static/build/build_css.php.html.html$" "/static/build/build_mode_css.php.html";
 "~^/build_head_includes.php$" "/static/build/build_head_includes.php";
 "~^/static/build/build_includes.php.html$" "/static/build/build_includes.php.html";
 "~^/static/build/linkabstract.r.*$" "/static/build/build/linkAbstract.R";
@@ -14948,6 +14948,8 @@
 "~^/[Uu]-text.*" "/utext";
 "~^/Utext.*" "/utext";
 "~^/\.utxt.*" "/utext";
+"~^/[Dd]rop-?cat.*" "/dropcap";
+"~^/[Dd]rop-?caps.*" "/dropcap";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
