--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9841,3 +9841,5 @@ default "";
 "~^/static/img/logo/logo-christmas.jpg.*$" "/static/img/logo/christmas/shawnpresser-hangingornaments.jpg";
 "~^/doc/nootropic/2020-haden.pdf.*$" "/doc/psychedelic/2020-haden.pdf";
 "~^/static/font/drop-cap/dropcat/dark/I.png.*$" "/static/font/drop-cap/dropcat/dark/I-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-dark-all-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-dark-final.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-white-final-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-light-final.png";
