--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9843,3 +9843,64 @@ default "";
 "~^/static/font/drop-cap/dropcat/dark/I.png.*$" "/static/font/drop-cap/dropcat/dark/I-1.png";
 "~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-dark-all-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-dark-final.png";
 "~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-white-final-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-light-final.png";
+"~^/doc/design/typography/dropcaps-cheshireinitials.png.*$" "/doc/design/typography/dropcap/cheshireinitials.png";
+"~^/doc/design/typography/dropcaps-deutschezierschrift.png.*$" "/doc/design/typography/dropcap/deutschezierschrift.png";
+"~^/doc/design/typography/dropcaps-goudyinitialen.png.*$" "/doc/design/typography/dropcap/goudyinitialen.png";
+"~^/doc/design/typography/dropcaps-kanzleiinitialen.png.*$" "/doc/design/typography/dropcap/kanzleiinitialen.png";
+"~^/doc/design/typography/dropcaps-yinit.png.*$" "/doc/design/typography/dropcap/yinit.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-b-dark.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-b-dark.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-b-light-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-b-light-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-b-light-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-b-light-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-dark-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-dark-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-dark-2-8-cropped.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-dark-2-8-cropped.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-dark-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-dark-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-light-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-light-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-light-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-light-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-c-light-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-c-light-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-i-black.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-i-black.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-i-white-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-i-white-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-dropcaps-cats-i-white-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-cats-i-white-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-15-gwern-midjourneyv5-halloween-dropcaps-glogo.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-15-gwern-midjourneyv5-halloween-glogo.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-16-gwern-midjourneyv5-christmas-dropcaps-glogo-dark-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-16-gwern-midjourneyv5-christmas-dropcaps-glogo-dark-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-16-gwern-midjourneyv5-christmas-dropcaps-glogo-light-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-16-gwern-midjourneyv5-christmas-dropcaps-glogo-light-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-16-gwern-midjourneyv5-christmas-dropcaps-glogo-light-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-light-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-dark-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-dark-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-dark-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-dark-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-light-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-light-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-light-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-light-4.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-4.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-17-gwern-midjourneyv5-dropcaps-cats-g-light-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-5.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-19-gwern-midjournevy5-dropcaps-cats-q-light-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-19-gwern-midjournevy5-cats-q-light-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-19-gwern-midjournevy5-dropcaps-cats-q-light-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-19-gwern-midjournevy5-cats-q-light-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-19-gwern-midjournevy5-dropcaps-cats-q-light-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-19-gwern-midjournevy5-cats-q-light-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-5.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-6.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-6.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjournevy5-dropcaps-cats-t-dark-7.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjournevy5-cats-t-dark-7.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-dropcaps-cats-q-dark-1.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-1.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-dropcaps-cats-q-dark-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-2.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-dropcaps-cats-q-dark-3.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-3.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-dropcaps-cats-q-dark-4.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-4.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-21-gwern-midjourneyv5-dropcaps-cats-q-dark-5.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-q-dark-5.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-dropcaps-dropcat-catsensereview-lightanddarkmode-demo.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-dropcat-catsensereview-lightanddarkmode-demo.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-dark-final.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-dark-final.png";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-26-gwern-midjourneyv5-dropcaps-dropcat-light-final.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-26-gwern-midjourneyv5-dropcat-light-final.png";
+"~^/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumb.jpg.*$" "/doc/fiction/gene-wolfe/suzanne-delage/2023-10-28-gwern-midjourneyv5-germanexpressionistlinocutofsinisternewenglandtowninwinter-thumbnail.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suzannedelage-blackandwhite1920smoviestaryoungwomanwearingsweater-samples-01.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suzannedelage-blackandwhite1920smoviestaryoungwomanwearingsweater-samples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suznannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-01.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suzannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-01.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suznannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-03.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suzannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-03.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suznannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-02.jpg.*$" "/doc/ai/nn/diffusion/midjourney/2023-10-28-gwern-midjourneyv5-suzannedelage-germanexpressionistlinocutofsinisternewenglandtowninwinter-samples-02.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-01-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-01.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-09-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-09.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-17-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-17.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-25-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-25.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-33-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-33.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-41-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-41.png";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-49-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-49.png";
+"~^/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronymns-threeletterandfourletter.txt.*$" "/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronyms-threeletterandfourletter.txt";
+"~^/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronymns-alphanumerical1to3lettertlas.txt.*$" "/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-alphanumerical1to3lettertlas.txt";
