--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14950,6 +14950,10 @@
 "~^/\.utxt.*" "/utext";
 "~^/[Dd]rop-?cat.*" "/dropcap";
 "~^/[Dd]rop-?caps.*" "/dropcap";
+"~^/Catitecture.*$" "/catitecture";
+"~^/[Cc]atithecture.*$" "/catitecture";
+"~^/[Cc]atitecthure.*$" "/catitecture";
+"~^/[Cc]atecture.*$" "/catitecture";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
