--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9904,3 +9904,4 @@ default "";
 "~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-49-2-2.png.*$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-29-gwern-midjourneyv5-genewolfe-f-dark-49.png";
 "~^/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronymns-threeletterandfourletter.txt.*$" "/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronyms-threeletterandfourletter.txt";
 "~^/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronymns-alphanumerical1to3lettertlas.txt.*$" "/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-alphanumerical1to3lettertlas.txt";
+"~^/doc/ai/anime/danbooru/2023-liu-2-2.pdf.*$" "/doc/ai/anime/danbooru/2023-liu-4.pdf";
