--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -14954,6 +14954,7 @@
 "~^/[Cc]atithecture.*$" "/catitecture";
 "~^/[Cc]atitecthure.*$" "/catitecture";
 "~^/[Cc]atecture.*$" "/catitecture";
+"~^/doc/food/2013-piquerasfiszman.pdf.*$" "/doc/food/2011-piquerasfiszman.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
