rename to add extension

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9905,3 +9905,5 @@ default "";
 "~^/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronymns-threeletterandfourletter.txt.*$" "/doc/wikipedia/2023-09-30-gwern-wikipedia-unusedacronyms-threeletterandfourletter.txt";
 "~^/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronymns-alphanumerical1to3lettertlas.txt.*$" "/doc/wikipedia/2023-10-01-gwern-wikipedia-unusedacronyms-alphanumerical1to3lettertlas.txt";
 "~^/doc/ai/anime/danbooru/2023-liu-2-2.pdf.*$" "/doc/ai/anime/danbooru/2023-liu-4.pdf";
+"~^/doc/cs/2021-koomey.pdf.*$" "/doc/cs/hardware/2021-koomey.pdf";
+"~^/static/build/png$" "/static/build/png.sh";
