SVG icons: consistently hyphenate multi-word names

--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9907,3 +9907,12 @@ default "";
 "~^/doc/ai/anime/danbooru/2023-liu-2-2.pdf.*$" "/doc/ai/anime/danbooru/2023-liu-4.pdf";
 "~^/doc/cs/2021-koomey.pdf.*$" "/doc/cs/hardware/2021-koomey.pdf";
 "~^/static/build/png$" "/static/build/png.sh";
+"~^/static/img/icon/hn.svg.*$" "/static/img/icon/hacker-news.svg";
+"~^/static/img/icon/internetarchive.svg.*$" "/static/img/icon/internet-archive.svg";
+"~^/static/img/icon/newyorktimes.svg.*$" "/static/img/icon/new-york-times.svg";
+"~^/static/img/icon/stackexchange.svg.*$" "/static/img/icon/stack-exchange.svg";
+"~^/static/img/icon/theguardian.svg.*$" "/static/img/icon/the-guardian.svg";
+"~^/static/img/icon/thenewyorker.svg.*$" "/static/img/icon/the-new-yorker.svg";
+"~^/static/img/icon/uptontea.svg.*$" "/static/img/icon/upton-tea.svg";
+"~^/static/img/icon/washingtonpost.svg.*$" "/static/img/icon/washington-post.svg";
+"~^/static/img/icon/worddoc.svg.*$" "/static/img/icon/word-doc.svg";
